Include size limit for occurrences facet queries
